added vars to hold refrences

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         </ul>
 
         <script>
-            
+
+const shoppingList = "ul";
+const newItem = "input";
+const btn = "button";
+
         </script>
     </body>
 </html>
