--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 
         <script>
 
-            const shoppingList = "ul";
-            const newItem = "input";
-            const btn = "button";
+            const shoppingList = document.querySelector(ul)
+            const newItem = document.querySelector(input);
+            const btn = document.querySelector(button);
+
+            
 
         </script>
     </body>
