--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             const shoppingList = document.querySelector(ul)
             const newItem = document.querySelector(input);
             const btn = document.querySelector(button);
-
+            btn.addEventListener("click", () => {
+                
+        })
             
 
         </script>
