append to listITem

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             const span = document.querySelector(span);
             const button = document.querySelector (button);
 
+            listItem.appendChild (span);
+            listItem.appendChild (button);
+
         </script>
     </body>
 </html>
