added delete button and clear function

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
         // vars to store new elements
             const list = document.querySelector(li);
             const span = document.querySelector(span);
-            const button = document.querySelector (button);
+            const DeleteButton = document.querySelector (button);
 
             listItem.appendChild (span);
-            listItem.appendChild (button);
+            listItem.appendChild (deleteButton);
 
+        deleteButton.addEventListener("click", () => {
+            (<li>...</li>)
+        })
+        
         </script>
     </body>
 </html>
