--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 
         deleteButton.addEventListener("click", () => {
             (<li>...</li>)
+
+            itemInput.focus();
         })
-        
+
         </script>
     </body>
 </html>
