--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>
             <label for = "item">Enter New Item</label>
             <input type = "text" name="item" id="item">
-            <button> Add Item</button>
+            <button> add-button</button>
         </div>
 
         <ul id = "shopping-list">
@@ -33,9 +33,9 @@
         <script>
 
             //Adds btn to DOM; defined vars
-            const shoppingList = document.querySelector(ul)
-            const listItem = document.querySelector(input);
-            const btn = document.querySelector(button);
+            const shoppingList = document.querySelector(`shopping-list`)
+            const listItem = document.querySelector(`item`);
+            const btn = document.querySelector(`add-button`);
 
             // Function fo button to use input
             btn.addEventListener("click", () => {
