--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 margin-bottom: 10px;
             }
 
-            li buttin {
+            li button {
                 font-size: 12px;
                 margin-left: 20px;
                 color:rgb(79, 144, 14);
