fixed notes and whitespace

--- a/index.html
+++ b/index.html
@@ -35,31 +35,32 @@
             //Adds btn to DOM; defined vars
             const shoppingList = document.querySelector(`shopping-list`)
             const listItem = document.querySelector(`item`);
-            const btn = document.querySelector(`add-button`);
+            const btn = document.querySelector(`add to list`);
 
-            // Function fo button to use input
+            // Function for button to use input
             btn.addEventListener("click", () => {
                 var input = document.getElementById (listItem).value;
                 const listItem = "";
-        })
-        // creates a list, span, and a buttton in DOM memory
-            document.createElement('li');
-            document.createElement("span");
-            document.createElement("button");
+        
+                 // creates a list, span, and a buttton in DOM memory
+                document.createElement('li');
+                document.createElement("span");
+                document.createElement("button");
 
-        // vars to store new elements
-            const list = document.querySelector(li);
-            const span = document.querySelector(span);
-            const DeleteButton = document.querySelector (button);
+                // vars to store new elements
+                const list = document.querySelector(li);
+                const span = document.querySelector(span);
+                const DeleteButton = document.querySelector (button);
 
-            listItem.appendChild (span);
-            listItem.appendChild (deleteButton);
+                listItem.appendChild (span);
+                listItem.appendChild (deleteButton);
 
-        deleteButton.addEventListener("click", () => {
-            (<li>...</li>)
-
-            itemInput.focus();
-        })
+                deleteButton.addEventListener("click", () => {
+                (<li>...</li>)
+                )};
+    
+                itemInput.focus();
+        });
 
         </script>
     </body>
