--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             //Adds btn to DOM; defined vars
             const shoppingList = document.querySelector(`shopping-list`)
-            const listItem = document.querySelector(`item`);
+            const mewItem = document.querySelector(`item`);
             const btn = document.querySelector(`add to list`);
 
             // Function for button to use input
@@ -48,12 +48,12 @@
                 document.createElement("button");
 
                 // vars to store new elements
-                const list = document.querySelector(li);
-                const span = document.querySelector(span);
+                const listItems = document.querySelector(li);
+                const listClass = document.querySelector(span);
                 const DeleteButton = document.querySelector (button);
 
-                listItem.appendChild (span);
-                listItem.appendChild (deleteButton);
+                newItem.appendChild (span);
+                newtItem.appendChild (deleteButton);
 
                 deleteButton.addEventListener("click", () => {
                 (<li>...</li>)
