changed var type + nsame, and correcyed syntax for value

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
             // Function for button to use input
             btn.addEventListener("click", () => {
-                var input = document.getElementById (listItem).value;
-                const listItem = "";
+                const itemInput = input.value;
+                input.value = '';
         
                  // creates a list, span, and a buttton in DOM memory
                 document.createElement('li');
