changed span name

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 // vars to store new elements
                 const listItems = document.querySelector(li);
-                const listClass = document.querySelector(span);
+                const listText = document.querySelector(span);
                 const DeleteButton = document.querySelector (button);
 
                 newItem.appendChild (span);
