--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 // vars to store new elements
                 const listItems = document.querySelector(li);
                 const listText = document.querySelector(span);
-                const DeleteButton = document.querySelector (button);
+                const deleteButton = document.querySelector (button);
 
-                newItem.appendChild (span);
+                newItem.appendChild (listText);
                 newtItem.appendChild (deleteButton);
 
                 deleteButton.addEventListener("click", () => {
