apppend list to newItem

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 const listText = document.querySelector(span);
                 const deleteButton = document.querySelector (button);
 
+                newItem.appendChild (listItems);
                 newItem.appendChild (listText);
                 newtItem.appendChild (deleteButton);
 
