appened to list (not newItem)

--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
                 const listText = document.querySelector(span);
                 const deleteButton = document.querySelector (button);
 
-                newItem.appendChild (listItems);
-                newItem.appendChild (listText);
-                newtItem.appendChild (deleteButton);
+                listItems.appendChild (listText);
+                listItems.appendChild (deleteButton);
 
                 deleteButton.addEventListener("click", () => {
                 (<li>...</li>)
