text content of span set to input

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 listItems.appendChild (listText);
                 listItems.appendChild (deleteButton);
 
+                span.textContent ({itemInput});
+
                 deleteButton.addEventListener("click", () => {
                 (<li>...</li>)
                 });
