--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 listItems.appendChild (deleteButton);
 
                 span.textContent ({itemInput});
+                deleteButton.textContent ("delete");
 
                 deleteButton.addEventListener("click", () => {
                 (<li>...</li>)
