--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 listItems.appendChild (listText);
                 listItems.appendChild (deleteButton);
 
-                listText.textContent ({itemInput});
+                listText.textContent = itemInput;
                 deleteButton.textContent ("delete");
 
                 deleteButton.addEventListener("click", () => {
