--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 listItems.appendChild (deleteButton);
 
                 listText.textContent = itemInput;
-                deleteButton.textContent ("delete");
+                deleteButton.textContent = "delete";
 
                 deleteButton.addEventListener("click", () => {
                 (<li>...</li>)
