finished deleteButton function

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 deleteButton.textContent = "delete";
 
                 deleteButton.addEventListener("click", () => {
-                (<li>...</li>)
+                shoppingList.removeChild (listItems);
                 });
     
                 itemInput.focus();
