--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <script>
 
             //Adds btn to DOM; defined vars
-            const shoppingList = document.querySelector(`shopping-list`)
+            const shoppingList = document.querySelector("shopping-list");
             const mewItem = document.querySelector(`item`);
             const btn = document.querySelector(`add to list`);
 
