--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <script>
 
             //Adds btn to DOM; defined vars
-            const shoppingList = document.querySelector("shopping-list");
-            const mewItem = document.querySelector(`item`);
-            const btn = document.querySelector(`add to list`);
+            const shoppingList = document.querySelector("#shopping-list");
+            const mewItem = document.querySelector(`#item`);
+            const btn = document.querySelector(`#add to list`);
 
             // Function for button to use input
             btn.addEventListener("click", () => {
