--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             //Adds btn to DOM; defined vars
             const shoppingList = document.querySelector("#shopping-list");
-            const mewItem = document.querySelector(`#item`);
+            const newItem = document.querySelector(`#item`);
             const btn = document.querySelector(`#add to list`);
 
             // Function for button to use input
