--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             // Function for button to use input
             btn.addEventListener("click", () => {
-                const itemInput = input.value;
+                const itemInput = item.value;
                 input.value = '';
         
                  // creates a list, span, and a buttton in DOM memory
