--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             //Adds btn to DOM; defined vars
             const shoppingList = document.querySelector("#shopping-list");
             const newItem = document.querySelector(`#item`);
-            const btn = document.querySelector(`#add to list`);
+            const addToList = document.querySelector(`#add to list`);
 
             // Function for button to use input
-            btn.addEventListener("click", () => {
+            button.addEventListener("click", () => {
                 const itemInput = item.value;
                 input.value = '';
         
