--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             const addToList = document.querySelector(`#add to list`);
 
             // Function for button to use input
-            document.querySelector("#add to list").addEventListener("click", () => {
+            document.querySelector(addToList).addEventListener("click", () => {
                 const itemInput = item.value;
                 input.value = '';
         
