--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             //Adds btn to DOM; defined vars
             const shoppingList = document.querySelector("#shopping-list");
             const newItem = document.querySelector(`#item`);
-            const addToList = document.querySelector(`#add to list`);
+            const addToList = document.querySelector(`#add-to-list`);
 
             // Function for button to use input
             document.querySelector(addToList).addEventListener("click", () => {
