corrected selctor name

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 item.textContent = '';
         
                 const listItems = document.createElement('li');
-                const span = document.createElement('span');
+                const listText = document.createElement('span');
                 const deleteButton = document.createElement('button');
 
 
-                listItems.appendChild (listText);
+                listItems.appendChild ();
                 listItems.appendChild (deleteButton);
 
                 listText.textContent = itemInput;
