--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 const deleteButton = document.createElement('button');
 
 
-                listItems.appendChild ();
+                listItems.appendChild (listText);
                 listItems.appendChild (deleteButton);
 
                 listText.textContent = itemInput;
