--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 shoppingList.removeChild (listItems);
                 });
     
-                itemInput.focus();
+                newItem.focus();
         });
 
         </script>
