--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div>
             <label for = "item">Enter New Item</label>
             <input type = "text" name="item" id="item">
-            <button id = add-to-list> add to list </button>
+            <button id = "add-to-list"> add to list </button>
         </div>
 
         <ul id = "shopping-list">
