--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 deleteButton.textContent = "delete";
 
                 deleteButton.addEventListener("click", () => {
-                listItems.removeChild (listItems);
+                shoppingList.removeChild (listItems);
                 });
     
                 newItem.focus();
