--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             document.querySelector('#add-to-list').addEventListener("click", () => {
                 const itemInput = newItem.value;
                 newItem.value = '';
+                console.log(newItem.value);
         
                 const listItems = document.createElement('li');
                 const listText = document.createElement('span');
