replaced dlete value

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             // Function for button to use input
             document.querySelector('#add-to-list').addEventListener("click", () => {
                 const itemInput = newItem.value;
-                
+                let newItem = " ";
                 console.log(newItem.value);
         
                 const listItems = document.createElement('li');
