body skeleton (header and div)

--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
     }
     </style>
 </head>
+<body>
+    <h1>SHOPPING LIST</h1>
+
+    <div>
+      <label for="item">Enter New Item</label>
+      <input type="text" name="item" id="item">
+      <button>Add item</button>
+    </div>
+  
+    <ul id="shopping-list"></ul>
+</body>
 
 </html>
