span text content pulled from userItem

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         listItem.appendChild(span);
         listItem.appendChild(button);
 
+        //span will read value from input
+        span.textContent = (userItem);
         //button will be labeled as "delete"
         deleteButton.textContent("delete");
 
