added whitespace and moved listItem to list

--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
 
         //span will read value from input
         span.textContent = (userItem);
+
         //button will be labeled as "delete"
         deleteButton.textContent("delete");
+
+        //moves listItem to the shopping list
+        shoppingList.appendChild(listItem);
+
 
 
         })
