added focus to input

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           shoppingList.removeChild(listItem);
         })
 
-
+        //resets so we can use input again
+        focus(input);
 
         })
 
