--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         //alows delete button to remove item from list when clicked
         deleteButton.addEventListener("click", () => {
           shoppingList.removeChild(listItem);
-        })
+        });
 
         //resets so we can use input again
-        focus(input);
+        input.focus();
 
-        })
+        });
 
     </script>
 </body>
