added color to h1

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
       margin-left: 20px;
       color: rgb(79, 144, 14);
     }
+
+    h1 {
+      color: pink;
+    }
+
     </style>
 </head>
 <body>
-    <h1>SHOPPING LIST</h1>
+    <h1 id = title>SHOPPING LIST</h1>
 
     <div>
       <label for="item">Enter New Item</label>
