--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
       color: rgb(79, 144, 14);
     }
 
-    h1 {
+    h1, div, #add-button {
       color: pink;
-      border-bottom:1px, solid black;
     }
 
     </style>
