styles for list

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <style>
     li {
       margin-bottom: 10px;
+      text-decoration: wavy;
     }
 
-    li button {
+    li button, #shoppingList {
       font-size: 12px;
       margin-left: 20px;
-      color: rgb(79, 144, 14);
+      color: rgb(144, 14, 14);
+      background-color: pink;
     }
 
     h1, div, #add-button {
