styles for button

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     li button, #shoppingList {
       font-size: 12px;
       margin-left: 20px;
-      color: rgb(144, 14, 14);
+      color: rgb(173, 77, 77);
       background-color: pink;
     }
 
-    h1, div, #add-button, span {
+    h1, div, button, span {
       color: pink;
     }
 
